// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react-dom parses react-dom Action 1`] = `
"import React from 'react';
import css from 'glam';

const styles = {
  h73hviv: css('css-1s0kfvh', [], () => [
    \`.css-1s0kfvh { flex-direction: column; -webkit-box-direction: normal; -webkit-box-orient: vertical; -ms-flex-direction: column; -webkit-flex-direction: column; }\`,
  ]),
};

const Action = props =>
  props.check
    ? <button onClick={props.clickMe} className={\`\${styles.h73hviv}\`}>
        <div>click me</div>
      </button>
    : null;
export default Action;
"
`;

exports[`react-dom parses react-dom BoxShadow 1`] = `
"import React from 'react';
import css from 'glam';

const styles = {
  h73hviv: css('css-1s0kfvh', [], () => [
    \`.css-1s0kfvh { flex-direction: column; -webkit-box-direction: normal; -webkit-box-orient: vertical; -ms-flex-direction: column; -webkit-flex-direction: column; }\`,
  ]),
};

const BoxShadow = props =>
  <div
    className={\`\${styles.h73hviv}\`}
    style={{ boxShadow: \`10px 5px 2px \${props.color}\` }}
  />;
export default BoxShadow;
"
`;

exports[`react-dom parses react-dom CaptureEmail 1`] = `
"import React from 'react';
import css from 'glam';

const styles = {
  hvufezv: css('css-17byui2', [], () => [
    \`.css-17byui2 { border: 1px solid black;
color: red; }\`,
    \`.css-17byui2::placeholder { color: blue; }\`,
  ]),
};

const CaptureEmail = props =>
  <input onSubmit={props.onSubmit} className={\`\${styles.hvufezv}\`} />;
export default CaptureEmail;
"
`;

exports[`react-dom parses react-dom CaptureFile 1`] = `
"import React from 'react';

const CaptureFile = props => <input />;
export default CaptureFile;
"
`;

exports[`react-dom parses react-dom CaptureNumber 1`] = `
"import React from 'react';

const CaptureNumber = props => <input />;
export default CaptureNumber;
"
`;

exports[`react-dom parses react-dom CapturePhone 1`] = `
"import React from 'react';

const CapturePhone = props => <input />;
export default CapturePhone;
"
`;

exports[`react-dom parses react-dom CaptureSecure 1`] = `
"import React from 'react';

const CaptureSecure = props => <input />;
export default CaptureSecure;
"
`;

exports[`react-dom parses react-dom CaptureText 1`] = `
"import React from 'react';

const CaptureText = props => <input />;
export default CaptureText;
"
`;

exports[`react-dom parses react-dom GoTo 1`] = `
"import React from 'react';
import css from 'glam';

const styles = {
  h73hviv: css('css-1s0kfvh', [], () => [
    \`.css-1s0kfvh { flex-direction: column; -webkit-box-direction: normal; -webkit-box-orient: vertical; -ms-flex-direction: column; -webkit-flex-direction: column; }\`,
  ]),
};

const GoTo = props =>
  <a goTo=\\"https://viewsdx.com\\" className={\`\${styles.h73hviv}\`}>
    <div>Go to ViewsDX website!</div>
  </a>;
export default GoTo;
"
`;

exports[`react-dom parses react-dom Horizontal 1`] = `
"import React from 'react';
import css from 'glam';

const styles = {
  h1vxlj3j: css('css-vkz5lf', [], () => [
    \`.css-vkz5lf { flex-direction: row; -webkit-box-direction: normal; -webkit-box-orient: horizontal; -ms-flex-direction: row; -webkit-flex-direction: row;
border: 1px solid red; }\`,
  ]),
};

const Horizontal = props => <div className={\`\${styles.h1vxlj3j}\`} />;
export default Horizontal;
"
`;

exports[`react-dom parses react-dom Hover 1`] = `
"import React from 'react';
import css from 'glam';

const styles = {
  h1ven99o: css('css-i58qmr', [], () => [
    \`.css-i58qmr { flex-direction: column; -webkit-box-direction: normal; -webkit-box-orient: vertical; -ms-flex-direction: column; -webkit-flex-direction: column;
background-color: black; }\`,
    \`.css-i58qmr:hover { background-color: white; }\`,
  ]),
  hanouj1: css('css-9glvsj', [], () => [
    \`.css-9glvsj { color: white; }\`,
    \`.css-9glvsj:hover { color: black; }\`,
  ]),
};

const Hover = props =>
  <button onClick={props.onClick} className={\`\${styles.h1ven99o}\`}>
    <div className={\`\${styles.hanouj1}\`}>Hey!</div>
  </button>;
export default Hover;
"
`;

exports[`react-dom parses react-dom HoverProxy 1`] = `
"import React from 'react';
import css from 'glam';

const styles = {
  h1ven99o: css('css-i58qmr', [], () => [
    \`.css-i58qmr { flex-direction: column; -webkit-box-direction: normal; -webkit-box-orient: vertical; -ms-flex-direction: column; -webkit-flex-direction: column;
background-color: black; }\`,
    \`.css-i58qmr:hover { background-color: white; }\`,
  ]),
  hanouj1: css('css-9glvsj', [], () => [
    \`.css-9glvsj { color: white; }\`,
    \`.css-9glvsj:hover { color: black; }\`,
  ]),
};

const HoverProxy = props =>
  <button onClick={props.onClick} className={\`\${styles.h1ven99o}\`}>
    <props.icon from={props.icon} fill=\\"white\\" fillHover=\\"black\\" />
    <div className={\`\${styles.hanouj1}\`}>Hey!</div>
  </button>;
export default HoverProxy;
"
`;

exports[`react-dom parses react-dom Image 1`] = `
"import React from 'react';

const Image = props => <img source=\\"https://viewsdx.com/rocks.jpg\\" />;
export default Image;
"
`;

exports[`react-dom parses react-dom JustText 1`] = `
"import React from 'react';

const JustText = props => <div>hey!</div>;
export default JustText;
"
`;

exports[`react-dom parses react-dom ListOfSomething 1`] = `
"import React from 'react';
import css from 'glam';

const styles = {
  h73hviv: css('css-1s0kfvh', [], () => [
    \`.css-1s0kfvh { flex-direction: column; -webkit-box-direction: normal; -webkit-box-orient: vertical; -ms-flex-direction: column; -webkit-flex-direction: column; }\`,
  ]),
};

const ListOfSomething = props =>
  <div className={\`\${styles.h73hviv}\`}>
    {props.list.map((item, i) => <div key={i}>{item.name}</div>)}
  </div>;
export default ListOfSomething;
"
`;

exports[`react-dom parses react-dom NameIsType 1`] = `
"import React from 'react';

const NameIsType = props => <div>iam</div>;
export default NameIsType;
"
`;

exports[`react-dom parses react-dom Proxy 1`] = `
"import React from 'react';

const Proxy = props =>
  <div><props.icon from={props.icon} fill=\\"red\\" /><div>{props.text}</div></div>;
export default Proxy;
"
`;

exports[`react-dom parses react-dom Svg 1`] = `
"import React from 'react';
import Svg, {
  Text as SvgText,
  Text as SvgText,
  Text as SvgText,
  Text as SvgText,
} from 'react-native-svg';

const Svg = props =>
  <Svg viewBox=\\"0 0 20 20\\">
    <Path d=\\"0 20\\" /><Circle cx={10} cy={5} r={5} />
    <G><Path d={1} /><Path d={2} /></G><text text=\\"hey\\" />
  </Svg>;
export default Svg;
"
`;

exports[`react-dom parses react-dom Teleport 1`] = `
"import React from 'react';
import css from 'glam';
import ViewsTeleport from './ViewsTeleport.view.js';

const styles = {
  h4wk4vz: css('css-sw3yj', [], () => [
    \`.css-sw3yj { flex-direction: row; -webkit-box-direction: normal; -webkit-box-orient: horizontal; -ms-flex-direction: row; -webkit-flex-direction: row; }\`,
  ]),
};

const Teleport = props =>
  <ViewsTeleport teleportTo=\\"..\\" className={\`\${styles.h4wk4vz}\`}>
    <div>go back</div>
  </ViewsTeleport>;
export default Teleport;
"
`;

exports[`react-dom parses react-dom Text 1`] = `
"import React from 'react';
import css from 'glam';

const styles = {
  h11bw6cg: css('css-1l09f9n', [], () => [
    \`.css-1l09f9n { color: blue;
font-family: Montserrat, sans-serif;
font-size: 16px;
font-weight: 300; }\`,
  ]),
};

const Text = props =>
  <div className={\`\${styles.h11bw6cg}\`}>Hi, I'm some text</div>;
export default Text;
"
`;

exports[`react-dom parses react-dom UseOfProxy 1`] = `
"import React from 'react';
import Button from './Button.view.js';

const UseOfProxy = props =>
  <div><Button color=\\"red\\" icon=\\"MyIcon\\" text=\\"I'm a button!\\" /></div>;
export default UseOfProxy;
"
`;

exports[`react-dom parses react-dom Vertical 1`] = `
"import React from 'react';
import css from 'glam';

const styles = {
  h1lis1gl: css('css-nxb3y5', [], () => [
    \`.css-nxb3y5 { flex-direction: column; -webkit-box-direction: normal; -webkit-box-orient: vertical; -ms-flex-direction: column; -webkit-flex-direction: column;
background-color: red; }\`,
  ]),
};

const Vertical = props => <div className={\`\${styles.h1lis1gl}\`} />;
export default Vertical;
"
`;

exports[`react-dom parses react-dom When 1`] = `
"import React from 'react';

const When = props =>
  <div>{props.showMe ? <div>I may be hidden</div> : null}</div>;
export default When;
"
`;

exports[`react-dom parses react-dom WhenList 1`] = `
"import React from 'react';
import css from 'glam';

const styles = {
  h73hviv: css('css-1s0kfvh', [], () => [
    \`.css-1s0kfvh { flex-direction: column; -webkit-box-direction: normal; -webkit-box-orient: vertical; -ms-flex-direction: column; -webkit-flex-direction: column; }\`,
  ]),
};

const WhenList = props =>
  <div>
    {props.showMe
      ? <div className={\`\${styles.h73hviv}\`}>
          {props.list.map((item, i) => <div key={i}>{item.thing}</div>)}
        </div>
      : null}
  </div>;
export default WhenList;
"
`;

exports[`react-dom parses react-dom WhenTopLevel 1`] = `
"import React from 'react';

const WhenTopLevel = props =>
  props.showMe ? <div>I may be hidden</div> : null;
export default WhenTopLevel;
"
`;

exports[`react-native parses react-native Action 1`] = `
"import React from 'react';
import { StyleSheet, Text, TouchableHighlight, View } from 'react-native';

const styles = StyleSheet.create({ h18pdll5: { flexDirection: 'column' } });

const Action = props =>
  props.check
    ? <TouchableHighlight
        activeOpacity={0.7}
        onPress={props.clickMe}
        underlayColor=\\"transparent\\"
      >
        <View style={styles.h18pdll5}><Text>click me</Text></View>
      </TouchableHighlight>
    : null;
export default Action;
"
`;

exports[`react-native parses react-native BoxShadow 1`] = `
"import React from 'react';
import { StyleSheet, View } from 'react-native';

const styles = StyleSheet.create({ h18pdll5: { flexDirection: 'column' } });

const BoxShadow = props =>
  <View
    style={[
      styles.h18pdll5,
      {
        elevation: 1,
        shadowOffset: { height: 10, width: 5 },
        shadowRadius: 2,
        shadowColor: props.color,
        shadowOpacity: 1,
      },
    ]}
  />;
export default BoxShadow;
"
`;

exports[`react-native parses react-native CaptureEmail 1`] = `
"import React from 'react';
import { KeyboardAvoidingView, StyleSheet, TextInput } from 'react-native';

const styles = StyleSheet.create({
  hm4pcs: {
    borderColor: 'black',
    borderStyle: 'solid',
    borderWidth: 1,
    color: 'red',
  },
});

const CaptureEmail = props =>
  <KeyboardAvoidingView behavior=\\"position\\">
    <TextInput
      onSubmitEditing={props.onSubmit}
      returnKeyType=\\"go\\"
      onChangeText={Email => this.setState({ Email })}
      ref={$e => (this.$captureEmail = $e)}
      value={state.Email}
      placeholderTextColor=\\"blue\\"
      style={styles.hm4pcs}
    />
  </KeyboardAvoidingView>;
export default CaptureEmail;
"
`;

exports[`react-native parses react-native CaptureFile 1`] = `
"import React from 'react';
import CaptureFile from './CaptureFile.view.js';

const CaptureFile = props => <CaptureFile />;
export default CaptureFile;
"
`;

exports[`react-native parses react-native CaptureNumber 1`] = `
"import React from 'react';
import { KeyboardAvoidingView, TextInput } from 'react-native';

const CaptureNumber = props =>
  <KeyboardAvoidingView behavior=\\"position\\">
    <TextInput />
  </KeyboardAvoidingView>;
export default CaptureNumber;
"
`;

exports[`react-native parses react-native CapturePhone 1`] = `
"import React from 'react';
import { KeyboardAvoidingView, TextInput } from 'react-native';

const CapturePhone = props =>
  <KeyboardAvoidingView behavior=\\"position\\">
    <TextInput />
  </KeyboardAvoidingView>;
export default CapturePhone;
"
`;

exports[`react-native parses react-native CaptureSecure 1`] = `
"import React from 'react';
import { KeyboardAvoidingView, TextInput } from 'react-native';

const CaptureSecure = props =>
  <KeyboardAvoidingView behavior=\\"position\\">
    <TextInput />
  </KeyboardAvoidingView>;
export default CaptureSecure;
"
`;

exports[`react-native parses react-native CaptureText 1`] = `
"import React from 'react';
import { KeyboardAvoidingView, TextInput } from 'react-native';

const CaptureText = props =>
  <KeyboardAvoidingView behavior=\\"position\\">
    <TextInput />
  </KeyboardAvoidingView>;
export default CaptureText;
"
`;

exports[`react-native parses react-native GoTo 1`] = `
"import React from 'react';
import Link from './Link.view.js';
import { StyleSheet, Text } from 'react-native';

const styles = StyleSheet.create({ h18pdll5: { flexDirection: 'column' } });

const GoTo = props =>
  <Link goTo=\\"https://viewsdx.com\\" style={styles.h18pdll5}>
    <Text>Go to ViewsDX website!</Text>
  </Link>;
export default GoTo;
"
`;

exports[`react-native parses react-native Horizontal 1`] = `
"import React from 'react';
import { StyleSheet, View } from 'react-native';

const styles = StyleSheet.create({
  h13qdyyc: {
    flexDirection: 'row',
    borderColor: 'red',
    borderStyle: 'solid',
    borderWidth: 1,
  },
});

const Horizontal = props => <View style={styles.h13qdyyc} />;
export default Horizontal;
"
`;

exports[`react-native parses react-native Hover 1`] = `
"import React from 'react';
import { StyleSheet, Text, TouchableHighlight, View } from 'react-native';

const styles = StyleSheet.create({
  h1jrzrhl: { flexDirection: 'column', backgroundColor: 'black' },
  hyfo4ef: { color: 'white' },
});

const Hover = props =>
  <TouchableHighlight
    activeOpacity={0.7}
    onPress={props.onClick}
    underlayColor=\\"transparent\\"
  >
    <View style={styles.h1jrzrhl}>
      <Text style={styles.hyfo4ef}>Hey!</Text>
    </View>
  </TouchableHighlight>;
export default Hover;
"
`;

exports[`react-native parses react-native HoverProxy 1`] = `
"import React from 'react';
import { StyleSheet, Text, TouchableHighlight, View } from 'react-native';

const styles = StyleSheet.create({
  h1jrzrhl: { flexDirection: 'column', backgroundColor: 'black' },
  hyfo4ef: { color: 'white' },
});

const HoverProxy = props =>
  <TouchableHighlight
    activeOpacity={0.7}
    onPress={props.onClick}
    underlayColor=\\"transparent\\"
  >
    <View style={styles.h1jrzrhl}>
      <props.icon from={props.icon} fill=\\"white\\" fillHover=\\"black\\" />
      <Text style={styles.hyfo4ef}>Hey!</Text>
    </View>
  </TouchableHighlight>;
export default HoverProxy;
"
`;

exports[`react-native parses react-native Image 1`] = `
"import React from 'react';
import { Image } from 'react-native';

const Image = props => <Image source=\\"https://viewsdx.com/rocks.jpg\\" />;
export default Image;
"
`;

exports[`react-native parses react-native JustText 1`] = `
"import React from 'react';
import { Text } from 'react-native';

const JustText = props => <Text>hey!</Text>;
export default JustText;
"
`;

exports[`react-native parses react-native ListOfSomething 1`] = `
"import React from 'react';
import { StyleSheet, Text, View } from 'react-native';

const styles = StyleSheet.create({ h18pdll5: { flexDirection: 'column' } });

const ListOfSomething = props =>
  <View style={styles.h18pdll5}>
    {props.list.map((item, i) => <Text key={i}>{item.name}</Text>)}
  </View>;
export default ListOfSomething;
"
`;

exports[`react-native parses react-native NameIsType 1`] = `
"import React from 'react';
import { Text } from 'react-native';

const NameIsType = props => <Text>iam</Text>;
export default NameIsType;
"
`;

exports[`react-native parses react-native Proxy 1`] = `
"import React from 'react';
import { Text, View } from 'react-native';

const Proxy = props =>
  <View>
    <props.icon from={props.icon} fill=\\"red\\" /><Text>{props.text}</Text>
  </View>;
export default Proxy;
"
`;

exports[`react-native parses react-native Svg 1`] = `
"import React from 'react';
import Svg, {
  Text as SvgText,
  Text as SvgText,
  Text as SvgText,
  Text as SvgText,
  Text as SvgText,
} from 'react-native-svg';

const Svg = props =>
  <Svg viewBox=\\"0 0 20 20\\">
    <Path d=\\"0 20\\" /><Circle cx={10} cy={5} r={5} />
    <G><Path d={1} /><Path d={2} /></G><SvgText text=\\"hey\\" />
  </Svg>;
export default Svg;
"
`;

exports[`react-native parses react-native Teleport 1`] = `
"import React from 'react';
import ViewsTeleport from './ViewsTeleport.view.js';
import { StyleSheet, Text } from 'react-native';

const styles = StyleSheet.create({ hp2cr4d: { flexDirection: 'row' } });

const Teleport = props =>
  <ViewsTeleport teleportTo=\\"..\\" style={styles.hp2cr4d}>
    <Text>go back</Text>
  </ViewsTeleport>;
export default Teleport;
"
`;

exports[`react-native parses react-native Text 1`] = `
"import React from 'react';
import { StyleSheet, Text } from 'react-native';

const styles = StyleSheet.create({
  h11t0jc: { color: 'blue', fontFamily: 'Montserrat-300', fontSize: 16 },
});

const Text = props => <Text style={styles.h11t0jc}>Hi, I'm some text</Text>;
export default Text;
"
`;

exports[`react-native parses react-native UseOfProxy 1`] = `
"import React from 'react';
import Button from './Button.view.js';
import { View } from 'react-native';

const UseOfProxy = props =>
  <View><Button color=\\"red\\" icon=\\"MyIcon\\" text=\\"I'm a button!\\" /></View>;
export default UseOfProxy;
"
`;

exports[`react-native parses react-native Vertical 1`] = `
"import React from 'react';
import { StyleSheet, View } from 'react-native';

const styles = StyleSheet.create({
  h1c5r919: { flexDirection: 'column', backgroundColor: 'red' },
});

const Vertical = props => <View style={styles.h1c5r919} />;
export default Vertical;
"
`;

exports[`react-native parses react-native When 1`] = `
"import React from 'react';
import { Text, View } from 'react-native';

const When = props =>
  <View>{props.showMe ? <Text>I may be hidden</Text> : null}</View>;
export default When;
"
`;

exports[`react-native parses react-native WhenList 1`] = `
"import React from 'react';
import { StyleSheet, Text, View } from 'react-native';

const styles = StyleSheet.create({ h18pdll5: { flexDirection: 'column' } });

const WhenList = props =>
  <View>
    {props.showMe
      ? <View style={styles.h18pdll5}>
          {props.list.map((item, i) => <Text key={i}>{item.thing}</Text>)}
        </View>
      : null}
  </View>;
export default WhenList;
"
`;

exports[`react-native parses react-native WhenTopLevel 1`] = `
"import React from 'react';
import { Text } from 'react-native';

const WhenTopLevel = props =>
  props.showMe ? <Text>I may be hidden</Text> : null;
export default WhenTopLevel;
"
`;
